k8s/mongo-express-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-express-pod
  labels:
    db: mongodb-express
spec:
  containers:
    - name: justjoinit-parser-mongo-db-express
      image: mongo-express:latest
      ports:
        - containerPort: 8081
          name: mongo-expr-port
