k8s/mongo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod
  labels:
    db: mongodb
spec:
  containers:
    - name: justjoinit-parser-mongo-db
      image: localhost:32000/my-mongodb:latest
      ports:
        - containerPort: 27017
          name: mongodb-port
      livenessProbe:
        exec:
          command:
            - bash
            - -c
            - "/wait-for-it.sh -t 0 localhost:27017 -- echo 'MongoDB is up!'"
        initialDelaySeconds: 10
        periodSeconds: 10
        timeoutSeconds: 1
        failureThreshold: 5
