k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
spec:
  selector:
    db: mongodb
  ports:
    - protocol: TCP
      port: 27017
      name: mongo-svc-port
      targetPort: mongodb-port
  type: ClusterIP
