k8s/mongo-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service-sts-headless
spec:
  selector:
    db: mongodb
  clusterIP: None
  ports:
    - port: 27017
      targetPort: mongodb-port
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db-sts
spec:
  serviceName: mongo-db-service-sts-headless
  replicas: 3
  selector:
    matchLabels:
      db: mongodb
  template:
    metadata:
      name: mongo-pod
      labels:
        db: mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: justjoinit-parser-mongo-db
          image: localhost:32000/my-mongodb:latest
          ports:
            - containerPort: 27017
              name: mongodb-port
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - "/wait-for-it.sh -t 0 localhost:27017 -- echo 'MongoDB is up!'"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 5
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-pvc
  volumeClaimTemplates:
    - metadata:
        name: mongodb-pvc
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 1G
