k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-app
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
#          - path: /selenium/?(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: selenium-hub-service
#                port:
#                  number: 4444
#  defaultBackend:
#    service:
#      name: mongo-express-service
#      port:
#        number: 8081
